--- a/ansible/roles/os-update/tasks/main.yml
+++ b/ansible/roles/os-update/tasks/main.yml
@@ -1,7 +1,20 @@
 ---
 - name: Upgrade all packages
-  become: true
   apt:
     update_cache: yes
     upgrade: dist
     autoremove: yes
+
+- name: Add extra packages
+  apt:
+    name: linux-modules-extra-raspi
+    state: present
+
+- name: Reboot and wait for it to restart
+  reboot:
+    msg: "Reboot initiated by Ansible"
+    connect_timeout: 5
+    reboot_timeout: 600
+    pre_reboot_delay: 0
+    post_reboot_delay: 30
+    test_command: whoami
