--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -1,5 +1,7 @@
 - hosts: rpi
+  become: yes
   gather_facts: no
   roles:
     - { role: os-update, tags: [os-update] }
     - { role: docker, tags: [docker] }
+    - { role: k3s/server, tags: [k3s/server] }
